--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <script src="data.js"></script>
+  <!-- <script src="data.js"></script> -->
   <script src="index.js"></script>
 </body>
 </html>
