--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta charset="utf-8">
 
   <title>Functional</title>
-  <meta name="description" content="Functional">
-  <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="">
 
@@ -14,6 +12,6 @@
 
 <body>
   <!-- <script src="data.js"></script> -->
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
